# RenderSchema

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  PUBLISHING.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  SUPPORT.md
examples/: README.md  basic_uml.py  class_relationships.py  flowchart_example.py
renderschema/: __init__.py  core.py
renderschema/exporters/: __init__.py  html.py  pdf.py  png.py  svg.py
renderschema/generators/: __init__.py  base.py  class_diagram.py  flowchart.py  uml.py
tests/: conftest.py  test_core.py  test_exporters.py  test_uml.py
